# dyvider-hs

./: .gitignore  CHANGELOG.md  README.md  dyvider-hs.cabal  test.py  tutorial.py
app/: Main.hs  Parse.hs
src/: Dyvider.hs  Metrics.hs
