cabal-version:      3.0
name:               dyvider-hs
version:            0.1.0.0
synopsis:           Exact linear community detection on embedded graphs.

-- A longer description of the package.
-- description:

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Simon Lizotte
maintainer:         simon.lizotte.1@ulaval.ca
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Dyvider
    build-depends:    base ^>=4.17.2.1,
                      unordered-containers,
                      array,
                      hashable,
                      containers,
    hs-source-dirs:   src
    default-language: Haskell2010

executable dyvider-hs
    import:           warnings
    main-is:          Main.hs
    other-modules:    Parse
    build-depends:    base ^>=4.17.2.1,
                      array,
                      dyvider-hs,
                      unordered-containers,
                      optparse-applicative,
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite dyvider-hs-test
    import:           warnings
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Tests.hs
    build-depends:
        base ^>=4.17.2.1,
        array,
        dyvider-hs,
